--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@googlemaps/polyline-codec": "^1.0.28",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,7 +13,6 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "redux-saga": "^1.2.2",
     "web-vitals": "^2.1.4"
